--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
     .small { padding:8px 12px; border-radius:6px; cursor:pointer; }
     /* small helper styles for show/hide */
     .input-wrapper { position:relative; width:100%; display:flex; align-items:center; }
-    .toggle-btn { position:absolute; right:8px; top:50%; transform:translateY(-50%); background:none; border:none; color:#007bff; cursor:pointer; padding:4px 6px; font-size:13px; }
+    .toggle-btn { position:absolute; right:8px; top:50%; transform:translateY(-50%); background:none; border:none; color:#ffb84d; cursor:pointer; padding:4px 6px; font-size:13px; }
     input[type=password], input[type=text], input[type=email], input[type=tel] { padding-right:56px; box-sizing:border-box; }
     .row { display:flex; align-items:center; gap:8px; margin:8px 0; }
     .row label { width:130px; display:inline-block; }
@@ -27,12 +27,6 @@
 </head>
 <body>
   <div class="auth-layout">
-    <aside class="info-card" aria-hidden="true">
-      <div class="info-inner">
-        <h2>Create your account</h2>
-        <p class="info-desc">Sign up quickly — we'll verify your phone/email with a one-time code.<br><br>No cards required. Privacy-first. Fast setup.</p>
-      </div>
-    </aside>
 
     <div class="form-column">
       <div class="overlay">
