--- a/forgot-mpin.html
+++ b/forgot-mpin.html
@@ -11,7 +11,7 @@
     .toggle-btn {
       cursor:pointer;
       font-size:13px;
-      color:#007bff;
+      color:#ffb84d;
       background:none;
       border:none;
       position:absolute;
