--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     .toggle-btn {
       cursor: pointer;
       font-size: 13px;
-      color: #007bff;
+      color: #ffb84d;
       background: none;
       border: none;
       padding: 6px;
