--- a/forgot-mpin.html
+++ b/forgot-mpin.html
@@ -32,6 +32,9 @@
 </head>
 <body>
   <div class="auth-layout">
+    <div class="nav-logo">
+  <img src="https://www.apnapayment.com/website/img/logo/ApnaPayment200White.png" alt="ApnaPayment">
+</div>
     <aside class="info-card" aria-hidden="true">
       <div class="info-inner">
         <h2>Reset your mPIN</h2>
