--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,9 @@
 </head>
 <body>
   <div class="auth-layout">
-
+<div class="nav-logo">
+  <img src="https://www.apnapayment.com/website/img/logo/ApnaPayment200White.png" alt="ApnaPayment">
+</div>
     <div class="form-column">
       <div class="overlay">
         <form id="signupForm" class="auth-card" autocomplete="off">
