--- a/collect_phone.html
+++ b/collect_phone.html
@@ -12,6 +12,9 @@
 </head>
 <body>
   <div class="auth-layout">
+    <div class="nav-logo">
+  <img src="https://www.apnapayment.com/website/img/logo/ApnaPayment200White.png" alt="ApnaPayment">
+</div>
     <aside class="info-card" aria-hidden="true">
       <div class="info-inner">
         <h2>Verify Your Phone For Further Assistance</h2>
