--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 </head>
 <body>
   <div class="auth-layout">
+    <div class="nav-logo">
+  <img src="https://www.apnapayment.com/website/img/logo/ApnaPayment200White.png" alt="ApnaPayment">
+</div>
     <aside class="info-card" aria-hidden="true">
       <div class="info-inner">
         <h2>Welcome back</h2>
