--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <label for="mpin">M-PIN</label>
         <div class="input-wrapper">
           <!-- note: id="mpin" added so toggle can find it -->
-          <input id="mpin" name="mpin" placeholder="●●●●" type="password" inputmode="numeric" maxlength="6" pattern="\d{4,6}" required />
+          <input id="mpin" name="mpin" placeholder="xxx-xxx" type="password" inputmode="numeric" maxlength="6" pattern="\d{6}" required />
           <button type="button" class="toggle-btn" data-target="mpin" aria-label="Show mPIN">Show</button>
         </div>
         <button id="loginBtn" type="submit">Login</button>
