--- a/signup.html
+++ b/signup.html
@@ -61,7 +61,7 @@
           <div class="row" style="align-items:center;">
             <label>mPIN</label>
             <div class="input-wrapper" style="flex:1;">
-              <input name="mpin" id="mpin" type="password" inputmode="numeric" maxlength="6" pattern="\d{4,6}" required placeholder="4–6 digits" />
+              <input name="mpin" id="mpin" type="password" inputmode="numeric" maxlength="6" pattern="\d{6}" required placeholder="6 digits" />
               <button type="button" class="toggle-btn" data-target="mpin">Show</button>
             </div>
           </div>
@@ -69,7 +69,7 @@
           <div class="row" style="align-items:center;">
             <label>Confirm mPIN</label>
             <div class="input-wrapper" style="flex:1;">
-              <input name="mpin_confirm" id="mpin_confirm" type="password" inputmode="numeric" maxlength="6" pattern="\d{4,6}" required placeholder="Repeat mPIN" />
+              <input name="mpin_confirm" id="mpin_confirm" type="password" inputmode="numeric" maxlength="6" pattern="\d{6}" required placeholder="Repeat mPIN" />
               <button type="button" class="toggle-btn" data-target="mpin_confirm">Show</button>
             </div>
           </div>
